# decaf

./: .gitignore  CMakeCache_renamed.txt  CMakeLists.txt
cmake/: FindNetCDF.cmake
examples/: CMakeLists.txt
examples/mpas_vis/: CMakeLists.txt  generate_script.py
examples/mpas_vis/src/: .main.cpp.swp  main.cpp
examples/mpas_vis/src/adapter/: adapter.h  mpas_adapter2.cpp
examples/mpas_vis/src/filters/: pathlines.cpp  streamlines.cpp
examples/mpas_vis/src/include/: advect.h  block.hpp  block_io.h  flow.h  interpolators.h  misc.h  mpaso.h  pathlines.h  pblock.h  pblock.hpp  ptrace.hpp  streamlines.h  tblock.hpp
examples/mpas_vis/src/io/: block_io.cpp  flow.cpp  mpaso.cpp
examples/mpas_vis/src/utils/: advect.cpp  interpolators.cpp  misc.cpp  pblock.cpp
examples/ptrace/: CMakeLists.txt
examples/ptrace/scripts/: gs32.py  insitu_bebop.sh  make_particle_file_ec.py  my.config32  run_bebop.sh  run_bebop2.sh  run_bebop5.sh  run_sample_rate.sh  run_seed_rate.sh  run_skip_rate.sh  test_bebop.sh
examples/ptrace/src/: main.cpp  pmain.cpp  prep_dense_seeds.cpp  smain.cpp
examples/ptrace/src/adapter/: adapter.cpp  adapter.h
examples/ptrace/src/core/: advect.cpp  advect.h  block.cpp  block.h  flowline.cpp  flowline.h  geometry_utils.cpp  geometry_utils.h  pathline.cpp  pathline.h  ptrace.cpp  ptrace.h  streamline.cpp  streamline.h
examples/ptrace/src/io/: mpas_io.cpp  mpas_io.h  particles_io.cpp  particles_io.h
examples/ptrace/src/utils/: misc.cpp  process.cpp  process.h
src/bredala/transport/: split.cpp
